Fail-fast validation for @Step and @Compensate at startup
FlowDefinitionScanner now validates at application startup (not runtime):
- @Compensate(step="X") must reference an existing @Step method name
  → IllegalStateException with available step names listed
- @Step and @Compensate methods must have exactly one OrchestratorFlow param
- No duplicate step orders within a @Flow class
- No duplicate step names within a @Flow class

If any validation fails, the Spring context fails to start with a clear
error message. No silent misconfiguration, no runtime surprises.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>