@@ -1,5 +1,6 @@
 package com.orchestrator.starter.flow;
 
+import com.orchestrator.starter.annotation.Compensate;
 import com.orchestrator.starter.annotation.Flow;
 import com.orchestrator.starter.annotation.Step;
 import com.orchestrator.starter.domain.OrchestratorFlow;
@@ -7,17 +8,19 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationContext;
 
 import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * Scans the Spring context for @Flow classes, discovers their @Step methods,
- * and creates MethodStepAdapter instances that the StepRegistry can use.
+ * Scans @Flow classes at startup, discovers @Step and @Compensate methods,
+ * validates wiring, and fails fast on misconfiguration.
  *
- * Called during auto-configuration to bridge the single-class flow definition
- * to the library's StepHandler-based engine.
+ * Validates:
+ * - @Step methods have exactly one OrchestratorFlow parameter
+ * - @Compensate(step=X) references an existing @Step method name
+ * - @Compensate methods have exactly one OrchestratorFlow parameter
+ * - No duplicate step orders
+ * - No duplicate step names
  */
 @Slf4j
 public class FlowDefinitionScanner {
@@ -26,19 +29,23 @@ public class FlowDefinitionScanner {
     public static List<StepHandler> scan(ApplicationContext context) {
         List<StepHandler> handlers = new ArrayList<>();
 
-        // Find all beans annotated with @Flow
         Map<String, Object> flowBeans = context.getBeansWithAnnotation(Flow.class);
 
         for (Map.Entry<String, Object> entry : flowBeans.entrySet()) {
             Object flowDef = entry.getValue();
             Class<?> clazz = flowDef.getClass();
 
-            // Scan methods for @Step
+            // Collect @Step method names for validation
+            Set<String> stepMethodNames = new HashSet<>();
+            Set<Integer> stepOrders = new HashSet<>();
+            Set<String> stepNames = new HashSet<>();
+
+            // Pass 1: discover @Step methods
             for (Method method : clazz.getDeclaredMethods()) {
                 Step stepAnnotation = method.getAnnotation(Step.class);
                 if (stepAnnotation == null) continue;
 
-                // Validate method signature: must accept exactly one OrchestratorFlow parameter
+                // Validate signature
                 if (method.getParameterCount() != 1 ||
                         !OrchestratorFlow.class.isAssignableFrom(method.getParameterTypes()[0])) {
                     throw new IllegalStateException(
@@ -46,11 +53,50 @@ public class FlowDefinitionScanner {
                                     " must accept exactly one parameter extending OrchestratorFlow");
                 }
 
+                // Validate no duplicate order
+                if (!stepOrders.add(stepAnnotation.order())) {
+                    throw new IllegalStateException(
+                            "@Flow " + clazz.getSimpleName() + ": duplicate step order " +
+                                    stepAnnotation.order() + " on method " + method.getName());
+                }
+
+                // Validate no duplicate name
+                String resolvedName = stepAnnotation.name().isEmpty()
+                        ? method.getName().replaceAll("([a-z])([A-Z])", "$1_$2").toUpperCase()
+                        : stepAnnotation.name();
+                if (!stepNames.add(resolvedName)) {
+                    throw new IllegalStateException(
+                            "@Flow " + clazz.getSimpleName() + ": duplicate step name '" +
+                                    resolvedName + "'");
+                }
+
+                stepMethodNames.add(method.getName());
+
                 MethodStepAdapter adapter = new MethodStepAdapter(flowDef, method, stepAnnotation);
                 handlers.add(adapter);
-                log.debug("Registered step: {} (order={}, type={}) from {}",
-                        adapter.getStepName(), adapter.getOrder(),
-                        stepAnnotation.type(), clazz.getSimpleName());
+            }
+
+            // Pass 2: validate @Compensate references
+            for (Method method : clazz.getDeclaredMethods()) {
+                Compensate comp = method.getAnnotation(Compensate.class);
+                if (comp == null) continue;
+
+                // Validate: @Compensate(step=X) must reference an existing @Step method
+                if (!stepMethodNames.contains(comp.step())) {
+                    throw new IllegalStateException(
+                            "@Compensate on " + clazz.getSimpleName() + "." + method.getName() +
+                                    " references step '" + comp.step() +
+                                    "' but no @Step method with that name exists. " +
+                                    "Available steps: " + stepMethodNames);
+                }
+
+                // Validate signature
+                if (method.getParameterCount() != 1 ||
+                        !OrchestratorFlow.class.isAssignableFrom(method.getParameterTypes()[0])) {
+                    throw new IllegalStateException(
+                            "@Compensate method " + clazz.getSimpleName() + "." + method.getName() +
+                                    " must accept exactly one parameter extending OrchestratorFlow");
+                }
             }
 
             if (handlers.isEmpty()) {
@@ -59,7 +105,8 @@ public class FlowDefinitionScanner {
                 handlers.sort(Comparator.comparingInt(StepHandler::getOrder));
                 log.info("Discovered @Flow {} with {} steps: {}",
                         clazz.getSimpleName(), handlers.size(),
-                        handlers.stream().map(StepHandler::getStepName).toList());
+                        handlers.stream().map(StepHandler::getStepName)
+                                .collect(Collectors.toList()));
             }
         }
 
